
plugins {
    id 'java'
}

apply plugin: 'application'

version '1.0-SNAPSHOT'
sourceCompatibility = 11

def currentOS = org.gradle.internal.os.OperatingSystem.current()
def platform
if (currentOS.isWindows()) {
    platform = 'win'
} else if (currentOS.isLinux()) {
    platform = 'linux'
} else if (currentOS.isMacOsX()) {
    platform = 'mac'
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile "org.openjfx:javafx-base:11:${platform}"
    compile "org.openjfx:javafx-graphics:11:${platform}"
    compile "org.openjfx:javafx-controls:11:${platform}"
    compile fileTree(dir: 'libs/javaml-0.1.5', include: ['*.jar'])
    compile fileTree(dir: 'libs/javaml-0.1.5/lib', include: ['*.jar'])
    //compile fileTree(dir: 'libs', include: ['*.jar'])


}

compileJava {
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls',
        ]
    }
}

run {
    doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls'
        ]
    }
}

mainClassName='Algorithm.LegendaryOctoSniffle'